--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "sideEffects": false,
   "scripts": {
     "download": "node scripts/downloadGoogleData.mjs",
-    "prebuild": "npm run download",
-    "build": "remix build",
-    "dev": "cross-env NODE_ENV=development netlify dev",
+    "build": "cross-env NODE_ENV=production remix build",
+    "dev": "cross-env NODE_ENV=development remix build && run-p dev:*",
+    "dev:node": "cross-env NODE_ENV=development nodemon ./build/index.js",
+    "dev:remix": "cross-env NODE_ENV=development remix watch",
     "postinstall": "remix setup node",
-    "start": "cross-env NODE_ENV=production netlify dev"
+    "start": "cross-env NODE_ENV=production node ./build/index.js"
   },
   "dependencies": {
-    "@netlify/functions": "^0.10.0",
-    "@remix-run/netlify": "^1.2.2",
+    "@remix-run/express": "^1.2.2",
+    "@remix-run/node": "^1.2.2",
     "@remix-run/react": "^1.2.2",
     "@styled-icons/boxicons-regular": "^10.38.0",
     "cheerio": "^1.0.0-rc.11",
+    "compression": "^1.7.4",
     "diff": "^5.0.0",
     "draft-convert": "^2.1.12",
     "google-spreadsheet": "^3.2.0",
@@ -26,7 +28,9 @@
     "graphql-request": "^4.0.0",
     "html-to-draftjs": "^1.5.0",
     "megadraft": "^0.7.5",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-audio-player": "^0.17.0",
     "react-dom": "^17.0.2",
@@ -42,10 +46,11 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^1.2.2",
-    "@remix-run/eslint-config": "^1.5.1",
+    "@remix-run/eslint-config": "^1.2.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
-    "eslint": "^8.16.0"
+    "eslint": "^8.16.0",
+    "nodemon": "^2.0.22"
   },
   "engines": {
     "node": ">=14"
