--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "dev:node": "cross-env NODE_ENV=development nodemon ./build/index.js",
     "dev:remix": "cross-env NODE_ENV=development remix watch",
     "postinstall": "remix setup node",
-    "start": "cross-env NODE_ENV=production node ./build/index.js"
+    "start": "cross-env NODE_ENV=production node ./build/index.js",
+    "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
+    "seed": "knex seed:run"
   },
   "dependencies": {
     "@remix-run/express": "^1.2.2",
@@ -27,10 +30,13 @@
     "graphql": "^16.3.0",
     "graphql-request": "^4.0.0",
     "html-to-draftjs": "^1.5.0",
+    "knex": "^2.4.2",
     "megadraft": "^0.7.5",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
     "npm-run-all": "^4.1.5",
+    "objection": "^3.0.1",
+    "pg": "^8.11.0",
     "react": "^17.0.2",
     "react-audio-player": "^0.17.0",
     "react-dom": "^17.0.2",
@@ -40,6 +46,7 @@
     "react-xarrows": "^2.0.2",
     "react-zoom-pan-pinch": "^3.0.7",
     "remix": "^1.2.2",
+    "sqlite3": "^5.1.6",
     "styled-components": "^5.3.9",
     "tiny-invariant": "^1.2.0",
     "uuid": "^8.3.2"
