--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
       NODE_ENV: production
     ports:
       - 3000:3000
+    depends_on:
+      - postgres
   postgres:
     image: postgres:15.3-alpine
     environment:
@@ -22,3 +24,5 @@ services:
     image: adminer
     ports:
       - 8080:8080
+    depends_on:
+      - postgres
